completed openweatherAPI call and Date method for current forecast div

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
        <section class="search-section">
         <div class="search">
             <h2 class="search-header">Search for a city:</h2>
-            <form action="">
-               <input type="text" name="search-bar" id="search-bar">
-               <button class="search-button">Search</button>
+            <form id="search-form">
+               <input type="text" name="search-bar" id="search-input" placeholder="Search City or Zip Code">
+               <button id="search-button">Search</button>
             </form>
         </div> 
 
@@ -32,7 +32,8 @@
 
        <section class="forecast-section">
         <div class="current-forecast">
-            <h2 class="current-header">Atlanta (9/13/2022) - icon</h2>
+            <h2 class="current-header">Atlanta (9/13/2022)</h2>
+            <img class="icon-image">
             <p>Temp: 76.62°F</p>
             <p>Wind: 8.43 MPH</p>
             <p>Humidity: 44 %</p>
