--- a/index.html
+++ b/index.html
@@ -24,51 +24,54 @@
 
         <div class="search-history">
             <!-- This button is a template and will need to be dynamically rendered after searching (local storage) -->
-            <button class="history-button">Atlanta</button>
-            <button class="history-button">Atlanta</button>
-            <button class="history-button">Atlanta</button>
+            <button class="history-button">Atlanta (demo - functionality TBD)</button>
         </div>
        </section>
 
        <section class="forecast-section">
-        <div class="current-forecast">
-            <h2 class="current-header">Atlanta (9/13/2022)</h2>
-            <img class="icon-image">
-            <p>Temp: 76.62°F</p>
-            <p>Wind: 8.43 MPH</p>
-            <p>Humidity: 44 %</p>
+        <div id="current-container">
+            <h2 class="current-header"></h2>
+            <img>
+            <p></p>
+            <p></p>
+            <p></p>
         </div>
-        <div class="five-day-forecast">
-            <h3 class="five-day-header">5-Day Forecast:</h3>
-            <div class="future-forecast">
-                <h4 class="future-header">9/14/2022</h4>
-                <p>Temp: 63.55°F</p>
-                <p>Wind: 3.94 MPH</p>
-                <p>Humidity: 63 %</p>
+        <div id="five-day-container" class="five-day-forecast">
+            <h3 class="five-day-header"></h3>
+            <div class="card">
+                <h4 class="future-header"></h4>
+                <img>
+                <p></p>
+                <p></p>
+                <p></p>
             </div>
-            <div class="future-forecast">
-                <h4 class="future-header">9/15/2022</h4>
-                <p>Temp: 63.55°F</p>
-                <p>Wind: 3.94 MPH</p>
-                <p>Humidity: 63 %</p>
+            <div class="card">
+                <h4 class="future-header"></h4>
+                <img>
+                <p></p>
+                <p></p>
+                <p></p>
             </div>
-            <div class="future-forecast">
-                <h4 class="future-header">9/16/2022</h4>
-                <p>Temp: 63.55°F</p>
-                <p>Wind: 3.94 MPH</p>
-                <p>Humidity: 63 %</p>
+            <div class="card">
+                <h4 class="future-header"></h4>
+                <img>
+                <p></p>
+                <p></p>
+                <p></p>
             </div>
-            <div class="future-forecast">
-                <h4 class="future-header">9/17/2022</h4>
-                <p>Temp: 63.55°F</p>
-                <p>Wind: 3.94 MPH</p>
-                <p>Humidity: 63 %</p>
+            <div class="card">
+                <h4 class="future-header"></h4>
+                <img>
+                <p></p>
+                <p></p>
+                <p></p>
             </div>
-            <div class="future-forecast">
-                <h4 class="future-header">9/18/2022</h4>
-                <p>Temp: 63.55°F</p>
-                <p>Wind: 3.94 MPH</p>
-                <p>Humidity: 63 %</p>
+            <div class="card">
+                <h4 class="future-header"></h4>
+                <img>
+                <p></p>
+                <p></p>
+                <p></p>
             </div>
         </div>
        </section>
